MA-945 #time 30m refactored some constructor code, added linting rules, fixing said linting rules

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "time-grunt": "1.0.0",
     "grunt": "0.4.5",
     "grunt-contrib-jshint": "0.10.0",
-    "matchdep": "0.3.0"
+    "matchdep": "0.3.0",
+    "xunit-file": "0.0.5",
+    "mocha": "^1.21.4",
+    "istanbul": "^0.3.2"
   },
   "dependencies": {
     "request": "2.42.0"
