Removed wildcarding from unit test dependencies

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "grunt-contrib-jshint": "0.10.0",
     "matchdep": "0.3.0",
     "xunit-file": "0.0.5",
-    "mocha": "^1.21.4",
-    "istanbul": "^0.3.2",
-    "grunt-shell": "^1.1.1",
-    "chai": "^1.9.1"
+    "mocha": "1.21.4",
+    "istanbul": "0.3.2",
+    "grunt-shell": "1.1.1",
+    "chai": "1.9.1"
   },
   "dependencies": {
     "request": "2.42.0"
