--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   },
   "homepage": "https://github.com/MessageSystems/node-sdk",
   "devDependencies": {
-    "jshint-stylish": "0.4.0",
-    "time-grunt": "1.0.0",
+    "chai": "1.9.1",
     "grunt": "0.4.5",
     "grunt-contrib-jshint": "0.10.0",
+    "grunt-shell": "1.1.1",
+    "istanbul": "0.3.2",
+    "jshint-stylish": "0.4.0",
     "matchdep": "0.3.0",
-    "xunit-file": "0.0.5",
-    "mocha": "^1.21.4",
-    "istanbul": "^0.3.2",
-    "grunt-shell": "^1.1.1",
-    "chai": "^1.9.1",
-    "proxyquire": "^1.0.1"
+    "mocha": "1.21.4",
+    "proxyquire": "1.0.1",
+    "time-grunt": "1.0.0",
+    "xunit-file": "0.0.5"
   },
   "dependencies": {
     "request": "2.42.0"
