--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/MessageSystems/node-sdk.git"
   },
   "author": "Message Systems, Inc.",
-  "license": "MIT",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/MessageSystems/node-sdk/issues"
   },
