--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "xunit-file": "0.0.5"
   },
   "dependencies": {
-    "request": "2.42.0",
-    "lodash": "2.4.1"
+    "lodash": "2.4.1",
+    "q": "1.2.0",
+    "request": "2.42.0"
   }
 }
