--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mocha": "1.21.4",
     "nock": "^1.6.0",
     "proxyquire": "1.0.1",
-    "sinon": "1.10.3",
+    "sinon": "^1.14.1",
     "sinon-chai": "2.5.0",
     "time-grunt": "1.0.0",
     "xunit-file": "0.0.5"
