--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "chai": "1.9.1",
     "grunt": "0.4.5",
+    "grunt-bump": "^0.3.1",
     "grunt-contrib-jshint": "0.10.0",
     "grunt-shell": "1.1.1",
     "istanbul": "0.3.2",
