--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   },
   "dependencies": {
     "lodash": "3.9.3",
-    "request": "2.42.0",
-    "snake-case": "^1.1.1"
+    "request": "2.42.0"
   }
 }
