--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "A Node.js wrapper for interfacing with your favorite SparkPost APIs",
   "main": "./lib/sparkpost.js",
   "scripts": {
-    "test": "grunt"
+    "test": "grunt",
+    "ci": "grunt && grunt coveralls:grunt_coveralls_coverage"
   },
   "keywords": [
     "email",
     "messaging"
-    ],
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/SparkPost/node-sparkpost"
@@ -25,6 +26,7 @@
     "grunt": "0.4.5",
     "grunt-bump": "^0.3.1",
     "grunt-contrib-jshint": "0.10.0",
+    "grunt-coveralls": "^1.0.0",
     "grunt-shell": "1.1.1",
     "istanbul": "0.3.2",
     "jshint-stylish": "0.4.0",
@@ -38,7 +40,7 @@
     "xunit-file": "0.0.5"
   },
   "dependencies": {
-    "lodash": "3.9.3",
+    "lodash": "^3.9.3",
     "request": "2.42.0"
   }
 }
