--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "xunit-file": "0.0.5"
   },
   "dependencies": {
+    "json-pointer": "^0.5.0",
     "lodash": "^3.9.3",
     "request": "2.42.0"
   }
