--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
   "dependencies": {
     "json-pointer": "^0.5.0",
     "lodash": "^3.9.3",
-    "request": "2.42.0"
+    "request": "^2.72.0"
   }
 }
