--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/SparkPost/node-sparkpost"
   },
   "author": "Message Systems, Inc.",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/SparkPost/node-sparkpost/issues"
   },
@@ -40,8 +40,9 @@
     "xunit-file": "0.0.5"
   },
   "dependencies": {
+    "bluebird": "^3.4.1",
     "json-pointer": "^0.5.0",
     "lodash": "^4.13.1",
-    "request": "^2.72.0"
+    "request": "^2.74.0"
   }
 }
