--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,7 @@
 {
   "node"               : true,
   "es3"                : false,
+  "esnext"             : true,
   "strict"             : true,
   "curly"              : true,
   "eqeqeq"             : true,
