--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: node_js
 node_js:
-- '4.1'
-- '4.0'
-- '0.12'
-- '0.10'
+- 'node'
+- '5'
+- '6'
 before_install: npm install -g grunt-cli
 install: npm install
 script: "npm run-script ci"
