--- a/package.json
+++ b/package.json
@@ -22,20 +22,22 @@
   },
   "homepage": "https://github.com/SparkPost/node-sparkpost",
   "devDependencies": {
-    "chai": "1.9.1",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "grunt": "0.4.5",
     "grunt-bump": "^0.3.1",
     "grunt-contrib-jshint": "0.10.0",
     "grunt-coveralls": "^1.0.0",
     "grunt-shell": "1.1.1",
-    "istanbul": "0.3.2",
+    "istanbul": "^0.4.5",
     "jshint-stylish": "0.4.0",
     "matchdep": "0.3.0",
-    "mocha": "1.21.4",
+    "mocha": "^3.0.2",
     "nock": "^7.2.2",
     "proxyquire": "1.0.1",
-    "sinon": "^1.14.1",
-    "sinon-chai": "2.5.0",
+    "sinon": "^1.17.5",
+    "sinon-as-promised": "^4.0.2",
+    "sinon-chai": "^2.8.0",
     "time-grunt": "1.0.0",
     "xunit-file": "0.0.5"
   },
