--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Node.js wrapper for interfacing with your favorite SparkPost APIs",
   "main": "./lib/sparkpost.js",
   "scripts": {
+    "lint": "eslint --fix lib/**",
     "test": "grunt",
     "ci": "grunt && grunt coveralls:grunt_coveralls_coverage"
   },
@@ -23,13 +24,13 @@
   "homepage": "https://github.com/SparkPost/node-sparkpost",
   "devDependencies": {
     "chai": "1.9.1",
+    "eslint": "^3.3.1",
+    "eslint-config-sparkpost": "^1.0.1",
     "grunt": "0.4.5",
     "grunt-bump": "^0.3.1",
-    "grunt-contrib-jshint": "0.10.0",
     "grunt-coveralls": "^1.0.0",
     "grunt-shell": "1.1.1",
     "istanbul": "0.3.2",
-    "jshint-stylish": "0.4.0",
     "matchdep": "0.3.0",
     "mocha": "1.21.4",
     "nock": "^7.2.2",
