--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A Node.js wrapper for interfacing with your favorite SparkPost APIs",
   "main": "./lib/sparkpost.js",
   "scripts": {
+    "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls.js && rm -rf ./coverage",
     "lint": "eslint --fix lib/**",
-    "test": "grunt",
-    "ci": "grunt && grunt coveralls:grunt_coveralls_coverage"
+    "test": "grunt"
   },
   "keywords": [
     "email",
@@ -24,15 +24,15 @@
   "homepage": "https://github.com/SparkPost/node-sparkpost",
   "devDependencies": {
     "chai": "1.9.1",
+    "coveralls": "^2.11.12",
     "eslint": "^3.3.1",
     "eslint-config-sparkpost": "^1.0.1",
     "grunt": "0.4.5",
     "grunt-bump": "^0.3.1",
-    "grunt-coveralls": "^1.0.0",
     "grunt-shell": "1.1.1",
-    "istanbul": "0.3.2",
+    "istanbul": "^0.4.5",
     "matchdep": "0.3.0",
-    "mocha": "1.21.4",
+    "mocha": "^3.0.2",
     "nock": "^7.2.2",
     "proxyquire": "1.0.1",
     "sinon": "^1.14.1",
