--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A Node.js wrapper for interfacing with your favorite SparkPost APIs",
   "main": "./lib/sparkpost.js",
   "scripts": {
-    "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls.js && rm -rf ./coverage",
-    "lint": "eslint --fix lib/**",
-    "test": "grunt"
+    "coveralls": "cat ./test/reports/lcov.info | coveralls",
+    "pretest": "eslint lib/**",
+    "test": "istanbul cover --report lcov --dir test/reports/ _mocha --recursive ./test/spec --grep ./test/**/*.spec.js -- --colors --reporter spec"
   },
   "keywords": [
     "email",
@@ -29,16 +29,13 @@
     "eslint-config-sparkpost": "^1.0.1",
     "grunt": "0.4.5",
     "grunt-bump": "^0.3.1",
-    "grunt-shell": "1.1.1",
     "istanbul": "^0.4.5",
     "matchdep": "0.3.0",
     "mocha": "^3.0.2",
     "nock": "^7.2.2",
     "proxyquire": "1.0.1",
     "sinon": "^1.14.1",
-    "sinon-chai": "2.5.0",
-    "time-grunt": "1.0.0",
-    "xunit-file": "0.0.5"
+    "sinon-chai": "2.5.0"
   },
   "dependencies": {
     "json-pointer": "^0.5.0",
