--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "coveralls": "cat ./test/reports/lcov.info | coveralls",
     "pretest": "eslint lib/**",
-    "test": "istanbul cover --report lcov --dir test/reports/ _mocha --recursive ./test/spec --grep ./test/**/*.spec.js -- --colors --reporter spec"
+    "test": "istanbul cover --report lcov --dir test/reports/ _mocha --recursive ./test/spec --grep ./test/**/*.spec.js -- --colors --reporter spec",
+    "postversion": "git push upstream && git push --tags upstream"
   },
   "keywords": [
     "email",
@@ -27,8 +28,6 @@
     "coveralls": "^2.11.12",
     "eslint": "^3.3.1",
     "eslint-config-sparkpost": "^1.0.1",
-    "grunt": "0.4.5",
-    "grunt-bump": "^0.3.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
     "nock": "^7.2.2",
