--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: node_js
 node_js:
-- '4'
-- '5'
-- '6'
-before_install: npm install -g grunt-cli
-install: npm install
-script: "npm run-script ci"
+  - '4'
+  - '5'
+  - '6'
+after_success:
+  - npm run coveralls
 notifications:
   slack:
     secure: dsz+D/TuylEi+6zqdB5dVqyMlpbpafaBBcAwYIijTK6LuG8KdIdGNSFVX1ro6o3bJFwMvtfxNeK1eFrMy8l6VHZQL0dkXWRmCl/pxLhEntUiYTDwDOtiqy1QLZtv5AqtsdSr1qLiOJtgF6gXk66xipnV2UzjLVVoxzSrdOSnX4U=
