--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A Node.js wrapper for interfacing with your favorite SparkPost APIs",
   "main": "./lib/sparkpost.js",
   "scripts": {
-    "lint": "eslint --fix lib/**",
-    "test": "grunt",
-    "ci": "grunt && grunt coveralls:grunt_coveralls_coverage"
+    "coveralls": "cat ./test/reports/lcov.info | coveralls",
+    "pretest": "eslint lib/**",
+    "test": "istanbul cover --report lcov --dir test/reports/ _mocha --recursive ./test/spec --grep ./test/**/*.spec.js -- --colors --reporter spec",
+    "postversion": "git push upstream && git push --tags upstream"
   },
   "keywords": [
     "email",
@@ -24,21 +25,14 @@
   "homepage": "https://github.com/SparkPost/node-sparkpost",
   "devDependencies": {
     "chai": "1.9.1",
+    "coveralls": "^2.11.12",
     "eslint": "^3.3.1",
     "eslint-config-sparkpost": "^1.0.1",
-    "grunt": "0.4.5",
-    "grunt-bump": "^0.3.1",
-    "grunt-coveralls": "^1.0.0",
-    "grunt-shell": "1.1.1",
-    "istanbul": "0.3.2",
-    "matchdep": "0.3.0",
-    "mocha": "1.21.4",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.0.2",
     "nock": "^7.2.2",
-    "proxyquire": "1.0.1",
     "sinon": "^1.14.1",
-    "sinon-chai": "2.5.0",
-    "time-grunt": "1.0.0",
-    "xunit-file": "0.0.5"
+    "sinon-chai": "2.5.0"
   },
   "dependencies": {
     "json-pointer": "^0.5.0",
