--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
   },
   "homepage": "https://github.com/SparkPost/node-sparkpost",
   "devDependencies": {
-    "chai": "1.9.1",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.12",
     "eslint": "^3.3.1",
     "eslint-config-sparkpost": "^1.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
     "nock": "^7.2.2",
-    "sinon": "^1.14.1",
-    "sinon-chai": "2.5.0"
+    "sinon": "^1.17.5",
+    "sinon-as-promised": "^4.0.2",
+    "sinon-chai": "^2.8.0"
   },
   "dependencies": {
     "json-pointer": "^0.5.0",
