--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "chai-as-promised": "^6.0.0",
     "coveralls": "^2.11.15",
     "eslint": "^3.12.2",
-    "eslint-config-sparkpost": "^1.3.1",
+    "eslint-config-sparkpost": "1.3.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "nock": "^9.0.0",
