--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.1.4",
   "description": "A Node.js wrapper for interfacing with your favorite SparkPost APIs",
   "main": "./lib/sparkpost.js",
+  "types": "./index.d.ts",
   "scripts": {
     "coveralls": "cat ./test/reports/lcov.info | coveralls",
     "pretest": "eslint lib/**",
@@ -27,6 +28,7 @@
     "node": ">=4"
   },
   "devDependencies": {
+    "@types/node": "^18.11.11",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "coveralls": "^3.0.2",
@@ -37,7 +39,8 @@
     "nock": "^9.0.0",
     "sinon": "^1.17.5",
     "sinon-as-promised": "^4.0.2",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "lodash": "^4.17.2",
