--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sparkpost",
-  "version": "2.1.4",
+  "name": "@indigov/sparkpost",
+  "version": "2.1.5",
   "description": "A Node.js wrapper for interfacing with your favorite SparkPost APIs",
   "main": "./lib/sparkpost.js",
   "types": "./index.d.ts",
