--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/sparkpost.js",
   "types": "./index.d.ts",
   "scripts": {
+    "audit:fix": "npx yarn-audit-fix",
     "coveralls": "cat ./test/reports/lcov.info | coveralls",
     "pretest": "eslint lib/**",
     "test": "istanbul cover --report lcov --dir test/reports/ _mocha --recursive ./test/spec --grep ./test/**/*.spec.js -- --colors --reporter spec",
@@ -32,7 +33,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "coveralls": "^3.0.2",
-    "eslint": "^3.12.2",
+    "eslint": "^3.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-sparkpost": "1.3.1",
     "istanbul": "^0.4.5",
@@ -49,6 +50,7 @@
     "request": "^2.79.0"
   },
   "volta": {
-    "node": "16.17.1"
+    "node": "16.17.1",
+    "yarn": "1.22.21"
   }
 }
